--- a/index.css
+++ b/index.css
@@ -54,7 +54,7 @@ body {
     grid-template-columns: 5% 5%;
     grid-template-columns: 1fr 1fr;
     gap: 12px;
-    margin: 0 30px;
+    margin: 0 90px;
 }
 
 .degree {
@@ -101,5 +101,71 @@ body {
 
 
 
+@media (max-width:695px) {
 
- 
+
+
+    .Home {
+        height: fit-content;    
+    }
+
+    :root {
+        --color: rgb(231, 227, 227);
+
+    }
+
+
+    /* For Header  */
+
+    .leftHeader h1 {
+        font-size: 20px;
+    }
+
+
+    .midHeader nav ul {
+        display: none;
+    }
+
+    .midHeader .navBar {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        top: 89px;
+        left: 0;
+        padding: 4px 6px;
+        width: 100%;
+        gap: 8px;
+        background-color: var(--homebg);
+    }
+
+    .midHeader .navBar li {
+        padding: 10px;
+        font-size: 20px;
+        background-color: var(--color);
+        border-radius: 8px;
+    }
+
+    .menu_icon {
+        display: block;
+
+    }
+
+    .rightHeader {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+
+
+    .display {
+        margin: 0 34px;
+    }
+
+    .degree img {
+        height: 10vh;
+        width: 10vw;
+    }
+
+
+}
